<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_create"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/button_create"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_generate"
        android:title="@string/button_generate"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_clear"
        android:title="@string/button_clear"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_show_paging"
        android:title="@string/paging"
        app:showAsAction="ifRoom"/>
</menu>