<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/top_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_empty_hint_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:visibility="gone"
        tools:text="@string/app_name"
        tools:visibility="visible"/>

    <android.support.v4.widget.Space
        android:id="@+id/middle_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"/>

    <FrameLayout
        android:id="@+id/middle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/middle_line">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/iv_empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:ignore="ContentDescription"
            tools:visibility="visible"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_empty_hint_middle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/middle_line"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/tv_empty_hint_middle_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_empty_hint_middle_1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="gone"
        tools:text="@string/app_name"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_empty_hint_middle_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin_half"
        android:text="@string/click_retry"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/tv_empty_hint_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        tools:text="@string/app_name"
        tools:visibility="visible"/>
</RelativeLayout>
